                        SpliceHack -- Changelog

A full list of differences in SpliceHack from vanilla NetHack can be found on
the wiki. This file documents the changes in each version of SpliceHack.

                    Version 0.5.0 - Balance and the Bizarre

Patches Introduced
- SpliceHack now uses xnethack's object materials patch.

Balance Changes
- Nerfed lamassu damage output.
- Nerfed amalgamations slightly. Additionally, amalgamations now use a
  completely different and much better naming system that fits in the game
  more naturally.
- Disabled dungeon crumbling feature. This may be reinstated upon feedback.
- The demon lords that appear due to performing the ritual are no longer
  covetous, preventing the player from being mobbed and randomly killed during
  the ascension.

Role and Race Changes
- Infernals use their own race tag, which changes their class selection
  slightly.
- Silver items generate more often for infernal characters, making the role
  much more harrowing to play.
- Infernals are now fire resistant instead of having infravision.
- Pirates no longer always get a message about rising as skeletal pirates.

Dungeon Changes
- New branch: Ice wastes. A creepy level covered in ice and snow, with an orb
  of permafrost at the end. This level is important in that it also has a
  guaranteed pair of earmuffs, so it is much easier to find something for
  sonic resistance during a run.
- New branch: Mysterious laboratory. This laboratory is run by mind flayers, and
  they are not thrilled to be interrupted. The level contains numerous
  spellbooks as loot.

New Monsters (12)
- Failure Eidolon, a unique monster appearing in the ice wastes. It can
  teleport the player.
- Ancient Brain, a unique monster appearing in the laboratory. It cannot move,
  but can fire psychic rays and cast spells.
- Nuckelavee, a new type of demon with poison breath.
- Cheshire cats. They are very rare and only spawn in Gehennom. They have